2005-01-31  Andrew John HUghes  <gnu_andrew@member.fsf.org>

	* acinclude.m4:
	(CLASSPATH_FIND_JAVAC): Add ECJ option.
	(CLASSPATH_WITH_ECJ): New function.
	(CLASSPATH_CHECK_ECJ): New function.
	* examples/Makefile.am:
	Allow examples to be built with ecj.
	* lib/Makefile.am:
	Allow Classpath to be built with ecj.
	
2005-01-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/locale/LocaleHelper.java:
	New utility class.
	(getLocalizedString(java.util.Locale,
	String, String, boolean, boolean)):
	More generic version of what was
	java.util.Locale.getDisplayString, now
	available to all classes.
	* gnu/java/locale/LocaleInformation.java,
	gnu/java/locale/LocaleInformation_aa.java,
	gnu/java/locale/LocaleInformation_aa_ET.java,
	gnu/java/locale/LocaleInformation_af.java,
	gnu/java/locale/LocaleInformation_am.java,
	gnu/java/locale/LocaleInformation_am_ET.java,
	gnu/java/locale/LocaleInformation_ar.java,
	gnu/java/locale/LocaleInformation_as.java,
	gnu/java/locale/LocaleInformation_az.java,
	gnu/java/locale/LocaleInformation_be.java,
	gnu/java/locale/LocaleInformation_bg.java,
	gnu/java/locale/LocaleInformation_bn.java,
	gnu/java/locale/LocaleInformation_byn.java
	gnu/java/locale/LocaleInformation_byn_ER.java
	gnu/java/locale/LocaleInformation_ca.java,
	gnu/java/locale/LocaleInformation_cs.java,
	gnu/java/locale/LocaleInformation_cy.java,
	gnu/java/locale/LocaleInformation_da.java,
	gnu/java/locale/LocaleInformation_de.java,
	gnu/java/locale/LocaleInformation_de_AT.java,
	gnu/java/locale/LocaleInformation_de_BE.java,
	gnu/java/locale/LocaleInformation_de_CH.java,
	gnu/java/locale/LocaleInformation_de_LU.java,
	gnu/java/locale/LocaleInformation_dv.java,
	gnu/java/locale/LocaleInformation_dz.java,
	gnu/java/locale/LocaleInformation_dz_BT.java,
	gnu/java/locale/LocaleInformation_el.java,
	gnu/java/locale/LocaleInformation_el_GR.java,
	gnu/java/locale/LocaleInformation_en.java,
	gnu/java/locale/LocaleInformation_en_AU.java,